# walksheds

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
.claude/: settings.json
.github/workflows/: ci.yml  cleanup-merged-preview.yml  deploy-branch.yml  deploy-preview-claude-move-data-to-repo-DMJZ6.yml  deploy-preview-claude-reorganize-poi-filters-6w4TU.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  refresh-walksheds.yml
.playwright-mcp/: page-2026-04-04T20-35-07-938Z.yml  page-2026-04-04T21-00-48-014Z.yml
backend/: models.py  pyproject.toml  requirements.txt  server.py
backend/tests/: conftest.py  test_models.py  test_routes.py
data/: bake_walksheds.py  build_station_index.py  compare_station_index.py  process.py  refresh.py  station-index.json  test_bake_walksheds.py  test_build_station_index.py  test_compare_station_index.py  test_process.py  test_refresh.py
data/pois/: fetch_pois.py  (+2 more)
docs/: api-schema.md
e2e/: intro.spec.js  smoke.spec.js
public/: 404.html  all-stations.geojson  line1-alignment.geojson  line2-alignment.geojson
src/: App.css  App.jsx  Intro.jsx  LineLegend.jsx  MapView.jsx  Menu.jsx  POILayer.jsx  POISearch.jsx  StationPill.jsx  ThemeSwitcher.jsx  WalkshedLayers.jsx  Walksheds.jsx  constants.js  deepLink.js  index.css  introState.js  main.jsx  mapbox.js  poiUtils.js  routeGraph.js  stationIcons.js  themes.js  useNavigation.js  walksheds.css
terraform/: Dockerfile  main.tf  outputs.tf  variables.tf  worker-stub.js
(+20 files in other folders)
